--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "axios": "^0.21.1",
         "cheerio": "^1.0.0-rc.3",
+        "date-fns": "^2.18.0",
         "dotenv": "^8.2.0",
         "mongodb": "^3.2.4",
         "mongoose": "^5.5.8",
