--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "Gabriel Chartier",
     "license": "ISC",
     "dependencies": {
+        "aws-sdk": "^2.858.0",
         "axios": "^0.21.1",
         "cheerio": "^1.0.0-rc.3",
         "date-fns": "^2.18.0",
