--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "dotenv": "^8.2.0",
         "mongodb": "^3.2.4",
         "mongoose": "^5.5.8",
+        "resemblejs": "^3.2.5",
         "winston": "^3.3.3",
         "winston-daily-rotate-file": "^3.9.0"
     },
