--- a/package.json
+++ b/package.json
@@ -1,31 +1,36 @@
 {
-    "name": "compendia-scraper",
-    "version": "1.0.0",
-    "description": "Compendia new comic releases web scraper",
-    "main": "src/scrapers/index.js",
-    "scripts": {
-        "parse": "node src/scrapers/index.js",
-        "commit": "node src/database/commit.js",
-        "test-releases": "node src/scrapers/previewsWorld/test/manualTest.js",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start-watch": "nodemon src/scrapers/index.js"
-    },
-    "keywords": [],
-    "author": "Gabriel Chartier",
-    "license": "ISC",
-    "dependencies": {
-        "aws-sdk": "^2.858.0",
-        "axios": "^0.21.1",
-        "cheerio": "^1.0.0-rc.3",
-        "date-fns": "^2.18.0",
-        "dotenv": "^8.2.0",
-        "pg": "^8.5.1",
-        "resemblejs": "^3.2.5",
-        "winston": "^3.3.3",
-        "winston-daily-rotate-file": "^3.9.0"
-    },
-    "devDependencies": {
-        "eslint": "^7.21.0",
-        "nodemon": "^1.19.0"
-    }
+  "name": "compendia-scraper",
+  "version": "1.0.0",
+  "description": "Compendia new comic releases web scraper",
+  "main": "src/scrapers/index.js",
+  "scripts": {
+    "parse": "node src/scrapers/index.js",
+    "commit": "node src/database/commit.js",
+    "lint": "eslint --ignore-path .gitignore .",
+    "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json)\"",
+    "format": "npm run prettier -- --write",
+    "check-format": "npm run prettier -- --list-different",
+    "test-releases": "node src/scrapers/previewsWorld/test/manualTest.js",
+    "validate": "npm run check-format && npm run lint"
+  },
+  "keywords": [],
+  "author": "Gabriel Chartier",
+  "license": "ISC",
+  "dependencies": {
+    "aws-sdk": "^2.858.0",
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.3",
+    "date-fns": "^2.18.0",
+    "dotenv": "^8.2.0",
+    "pg": "^8.5.1",
+    "resemblejs": "^3.2.5",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^3.9.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "nodemon": "^1.19.0",
+    "prettier": "^2.2.1"
+  }
 }
